--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -328,7 +328,6 @@ acq_grid_VAR_post <- acquisition_VAR_post(theta_vals = scale_input_data(round1_c
 
 acq_grid_EIVAR_approxpost_lpost <- acquisition_EIVAR_lpost(theta_vals = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
                                                            emulator_info_list = emulator_info_list, 
-                                                           theta_prior_params = theta_prior_params, 
                                                            sig2_eps = sig2_eps_estimates, 
                                                            theta_grid_integrate = scale_input_data(round1_integrate_samp, input_bounds = design_info$input_bounds))
 ```
@@ -387,8 +386,20 @@ plot(acq_VAR_post_plt)
 plot(acq_EIVAR_approxpost_lpost_plt)
 ```
 
+```{r}
+# Optimizing acquisition. 
+
+new_point <- optimize_acquisition_grid(acquisition_type = "EIVAR_lpost", 
+                                       theta_grid_candidate = scale_input_data(round1_candidate_samp, input_bounds = design_info$input_bounds), 
+                                       emulator_info_list = emulator_info_list, 
+                                       computer_model_data = computer_model_data, 
+                                       sig2_eps = sig_eps_estimates, 
+                                       theta_grid_integrate =  scale_input_data(round1_integrate_samp, input_bounds = design_info$input_bounds)) 
+                         
+print(new_point)
 
 
+```
 
 
 
